# docs/apispec.json
@@ -19,10 +19,43 @@
   "paths": {
     "/users": {
       "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["Users API"],
         "summary": "Get all users",
         "description": "Get all users",
         "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Limiting the result",
+            "schema": {
+              "type": "string"
+            },
+            "examples": {
+              "10": {
+                "value": "10",
+                "description": "Limiting result by 10"
+              }
+            }
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "description": "Skip the result",
+            "schema": {
+              "type": "string"
+            },
+            "examples": {
+              "10": {
+                "value": "5",
+                "description": "Skip result by 10"
+              }
+            }
+          },
           {
             "name": "lastname",
             "in": "query",
@@ -52,34 +85,6 @@
               "desc": {
                 "value": "lastname.desc",
                 "description": "Example lastname Descending Sort"
-              }
-            }
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "description": "Limiting the result",
-            "schema": {
-              "type": "string"
-            },
-            "examples": {
-              "10": {
-                "value": "10",
-                "description": "Limiting result by 10"
-              }
-            }
-          },
-          {
-            "name": "offset",
-            "in": "query",
-            "description": "Offset for starting result",
-            "schema": {
-              "type": "string"
-            },
-            "examples": {
-              "20": {
-                "value": "20",
-                "description": "Offset start from 20"
               }
             }
           }
@@ -119,6 +124,7 @@
                           "firstName": "Abdul",
                           "lastName": "Qadir",
                           "email": "abdulqadir@gmail.com",
+                          "birthOfDate": "2000-10-10",
                           "role": "superadmin",
                           "createdAt": "2020-09-12",
                           "updatedAt": "2020-09-13"
@@ -128,6 +134,7 @@
                           "firstName": "John",
                           "lastName": "Doe",
                           "email": "johndoe@gmail.com",
+                          "birthOfDate": "2000-10-10",
                           "role": "operator",
                           "createdAt": "2020-09-12",
                           "updatedAt": "2020-09-13"
@@ -142,6 +149,11 @@
         }
       },
       "post": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["Users API"],
         "summary": "Create a new user",
         "description": "Create anew user",
@@ -159,6 +171,7 @@
                     "firstName": "Abdul",
                     "lastName": "Qadir",
                     "email": "abdulqadir@gmail.com",
+                    "birthOfDate": "2000-10-10",
                     "role": "superadmin",
                     "password": "loremipsumdolor"
                   }
@@ -197,6 +210,7 @@
                         "id": "avdjruwndfsdjfkwei2",
                         "firstName": "Abdul",
                         "lastName": "Qadir",
+                        "birthOfDate": "2000-10-10",
                         "email": "abdulqadir@gmail.com",
                         "role": "superadmin",
                         "createdAt": "2020-09-12",
@@ -221,12 +235,10 @@
                     "value": {
                       "code": 400,
                       "status": "BAD REQUEST",
-                      "errors": [
-                        {
-                          "name": "ErrValidation",
-                          "error": "`firstName` value cannot be empty"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrValidation",
+                        "message": "`firstName` value cannot be empty"
+                      }
                     }
                   }
                 }
@@ -238,6 +250,11 @@
     },
     "/users/{userId}": {
       "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["Users API"],
         "summary": "Get user by id",
         "description": "Get user by id",
@@ -264,6 +281,7 @@
                         "id": "avdjruwndfsdjfkwei2",
                         "firstName": "Abdul",
                         "lastName": "Qadir",
+                        "birthOfDate": "2000-10-10",
                         "email": "abdulqadir@gmail.com",
                         "role": "superadmin",
                         "createdAt": "2020-09-12",
@@ -288,12 +306,10 @@
                     "value": {
                       "code": 404,
                       "status": "NOT FOUND",
-                      "errors": [
-                        {
-                          "name": "ErrNotFound",
-                          "error": "user not found"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrNotFound",
+                        "message": "user not found"
+                      }
                     }
                   }
                 }
@@ -303,6 +319,11 @@
         }
       },
       "put": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["Users API"],
         "summary": "Update user by id",
         "description": "Update user by id",
@@ -324,6 +345,7 @@
                   "value": {
                     "firstName": "Abdul",
                     "lastName": "Qadir",
+                    "birthOfDate": "2000-10-10",
                     "email": "abdulqadir@gmail.com",
                     "role": "superadmin",
                     "password": "loremipsumdolor"
@@ -363,6 +385,7 @@
                         "id": "avdjruwndfsdjfkwei2",
                         "firstName": "Abdul",
                         "lastName": "Qadir",
+                        "birthOfDate": "2000-10-10",
                         "email": "abdulqadir@gmail.com",
                         "role": "superadmin",
                         "createdAt": "2020-09-12",
@@ -387,12 +410,10 @@
                     "value": {
                       "code": 400,
                       "status": "BAD REQUEST",
-                      "errors": [
-                        {
-                          "name": "ErrValidation",
-                          "error": "`firstName` value cannot be empty"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrValidation",
+                        "message": "`firstName` value cannot be empty"
+                      }
                     }
                   }
                 }
@@ -412,12 +433,10 @@
                     "value": {
                       "code": 404,
                       "status": "NOT FOUND",
-                      "errors": [
-                        {
-                          "name": "ErrNotFound",
-                          "error": "user not found"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrNotFound",
+                        "message": "user not found"
+                      }
                     }
                   }
                 }
@@ -427,6 +446,11 @@
         }
       },
       "delete": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": ["Users API"],
         "summary": "Delete an existing user by id",
         "description": "Delete an existing user by id",
@@ -477,12 +501,10 @@
                     "value": {
                       "code": 404,
                       "status": "NOT FOUND",
-                      "errors": [
-                        {
-                          "name": "ErrNotFound",
-                          "error": "user not found"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrNotFound",
+                        "message": "user not found"
+                      }
                     }
                   }
                 }
@@ -587,12 +609,10 @@
                     "value": {
                       "code": 401,
                       "status": "UNAUTHORIZED",
-                      "errors": [
-                        {
-                          "name": "ErrUNAUTHORIZED",
-                          "error": "wrong username and password"
-                        }
-                      ]
+                      "error": {
+                        "name": "ErrUNAUTHORIZED",
+                        "message": "wrong username and password"
+                      }
                     }
                   }
                 }
@@ -624,6 +644,9 @@
                     "minLength": 1,
                     "required": ["true"]
                   },
+                  "birthOfDate": {
+                    "type": "string"
+                  },
                   "email": {
                     "type": "string",
                     "format": "email",
@@ -644,6 +667,7 @@
                     "firstName": "Abdul",
                     "lastName": "Qadir",
                     "email": "abdulqadir@gmail.com",
+                    "birthOfDate": "2000-10-10",
                     "password": "loremipsum78"
                   }
                 }
@@ -709,10 +733,106 @@
                     "value": {
                       "code": 400,
                       "status": "BAD REQUEST",
+                      "error": {
+                        "name": "ErrValidation",
+                        "message": "`firstName` value cannot be empty"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/forgot-password": {
+      "post": {
+        "tags": ["Authentication API"],
+        "summary": "Forgot password",
+        "description": "Forgot password",
+        "requestBody": {
+          "description": "Request body for forgot password",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "format": "email"
+                  }
+                }
+              },
+              "examples": {
+                "abdul": {
+                  "description": "Example for abdul in request body",
+                  "value": {
+                    "email": "abdulqadir@gmail.com"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Response success for forgot password",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "integer",
+                      "format": "int32"
+                    },
+                    "status": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "message": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                },
+                "examples": {
+                  "success": {
+                    "description": "Example for response success forgot password",
+                    "value": {
+                      "code": 200,
+                      "status": "OK",
+                      "data": {
+                        "message": "Email reset password sent successfully"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Failed response for forgot password",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Err"
+                },
+                "examples": {
+                  "failed": {
+                    "description": "Failed response for forgot password",
+                    "value": {
+                      "code": 404,
+                      "status": "NOT FOUND",
                       "errors": [
                         {
-                          "name": "ErrValidation",
-                          "error": "`firstName` value cannot be empty"
+                          "name": "ErrNotFound",
+                          "message": "user not found"
                         }
                       ]
                     }
@@ -723,10 +843,16 @@
           }
         }
       }
-    },
-    "/auth/forgot-password": {}
+    }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "parameters": {
       "UserId": {
         "name": "userId",
@@ -749,6 +875,9 @@
             "type": "string"
           },
           "lastName": {
+            "type": "string"
+          },
+          "birthOfDate": {
             "type": "string"
           },
           "email": {
@@ -800,17 +929,14 @@
           "status": {
             "type": "string"
           },
-          "errors": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string"
-                },
-                "error": {
-                  "type": "string"
-                }
+          "error": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "message": {
+                "type": "string"
               }
             }
           }
